# anki-ai-util

./: .env.example  .gitignore  AGENT_BRIEF.md  README.md  anki-tips.txt  main.py  package-lock.json  package.json  progress.md  pyproject.toml
app/: page.tsx
app/api/ai/: route.ts
app/api/anki/: route.ts
app/bulk-edit/: page.tsx
app/generate/: page.tsx
components/: CurrentCard.tsx  MarkdownEditor.tsx  ProposalReviewer.tsx
lib/: anki.py  anki.ts  convert.py  convert.ts  llm.py  llm.ts  models.py  policy.py  prompts.py  validate.py
policies/: card_quality.md
prompts/: judge_v1.md  single_suggestion_v1.md  suggest_v1.md
routers/: bulk_edit.py  current_card.py  generate.py
scripts/: seed_test_decks.py
static/: style.css
templates/: base.html  bulk_edit.html  generate.html  index.html
templates/partials/: current_card.html  no_changes.html  proposal.html
