[project]
name = "anki-ai-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
